--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,6 +1,20 @@
-html,body,#app{
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    margin: 0;
+html,
+body,
+#app {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
+.el-breadcrumb {
+  margin-bottom: 15px;
+  font-size: 12px!important;
+}
+.el-card {
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15)!important;
+}
+
+.el-table {
+  margin-top: 15px;
+  font-size: 12px!important;
 }
