--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -9,16 +9,28 @@ body,
 }
 .el-breadcrumb {
   margin-bottom: 15px;
-  font-size: 12px!important;
+  font-size: 12px !important;
 }
 .el-card {
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15)!important;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15) !important;
 }
 
 .el-table {
   margin-top: 15px;
-  font-size: 12px!important;
+  font-size: 12px !important;
 }
 .el-scrollbar__wrap {
   height: 200px !important;
+}
+.el-pagination {
+  margin-top: 15px;
+}
+.el-steps {
+  margin: 15px 0;
+}
+.el-step__title {
+  font-size: 13px;
+}
+.ql-editor {
+  min-height: 300px;
 }
